TerminalOps Formatted